# fastapi-ui-vben

./: .env  .gitignore  .gitkeep  README.md  app.py  pyproject.toml  requirement.txt
api/: __init__.py  login.py  user.py
backend/: README.md  alembic.ini  app.py  config.py  init_db.py  pyproject.toml  requirement.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 0063f892644b_init_tables.py  67d2d903931d_init_tables.py  7d2eb9bff8f0_init_tables.py  cb487d7ac856_upadte.py  dc8117dbe8e6_update_avatar.py
backend/api/: __init__.py  access.py  role.py  test.py  user.py  websocket.py  wechat.py
backend/core/: auth.py  events.py  exception.py  middleware.py  redis.py  response.py  router.py  session.py  utils.py
backend/curd/: __init__.py  access.py  role.py  user.py
backend/db/curd/: user.py
backend/models/: base.py
backend/schemas/: base.py  role.py  user.py
backend/views/: __init__.py
core/: auth.py  config.py  events.py  exception.py  helper.py  middleware.py  redis.py  response.py  router.py  session.py  utils.py
db/: session.py
db/curd/: user.py
db/models/: user.py
db/schemas/: base.py  user.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/apps/web-ele/: .env.development
frontend/apps/web-ele/src/api/: request.ts
frontend/apps/web-ele/src/api/core/: auth.ts  role.ts  user.ts
frontend/apps/web-ele/src/router/: guard.ts
frontend/apps/web-ele/src/store/: auth.ts
static/templates/: index.html  login.html  reg_page.html  test_redis.html
views/: __init__.py  home.py  redis.py  user.py
(+11 files in other folders)
