[project]
name = "fastapi-backend"
version = "0.1.0"
description = "fastapi backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.5",
    "fastapi[all]>=0.117.1",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.36.0",
]
